--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,12 +1,29 @@
-version: '2'
+version: '333'
 services:
+  bind9:
+    container_name: bind-dns
+    image: ubuntu/bind9:latest
+    environment:
+      - BIND9_USER=root
+      - TZ=America/Chicago
+    networks:
+      physical:
+        ipv4_address: 10.0.0.11
+    ports:
+      - "53:53/tcp"
+      - "53:53/udp"
+    volumes:
+      - /dockconf/bind9/config/:/etc/bind
+      - /dockconf/bind9/cache:/var/cache/bind
+      - /dockconf/bind9/records:/var/lib/bind
+    restart: unless-stopped
   plex:
     container_name: plex
     image: plexinc/pms-docker
     restart: unless-stopped
     environment:
       - TZ=CDT
-      - PLEX_CLAIM=[replace_claim]
+      - PLEX_CLAIM=[replace]
     networks:
       physical:
         ipv4_address: 10.0.1.99
@@ -18,6 +35,7 @@ services:
   reverse:
     container_name: homelab-nginx
     image: nginx
+    hostname: homelab-nginx
     restart: unless-stopped
     volumes:
       - /plex/plex.conf:/etc/nginx/conf.d/default.conf
@@ -25,19 +43,24 @@ services:
     networks:
       physical:
         ipv4_address: 10.0.1.98
-  cifs:
-    container_name: cifs
-    image: dperson/samba
-    restart: unless-stopped
+  portainer:
+    container_name: portainer
+    hostname: portainer
+    image: portainer/portainer-ce:latest
+    restart: always
     ports:
-      - "445:445"
-      - "139:139"
+      - "8000:8000"
+      - "9443:9443"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
     networks:
       - bridehomelab
-    volumes:
-      - /plex/media:/mount
 networks:
   physical:
     external: true
   bridehomelab:
     driver: bridge
+
+volumes:
+  portainer_data:
