added dns and nginx to second server

--- a/nginx/plextrahdev.conf
+++ b/nginx/plextrahdev.conf
@@ -1,5 +1,5 @@
 server {
-    server_name plex.justintrahan.com www.plex.justintrahan.com;
+    server_name plex.trahan.dev www.plex.trahan.dev;
 
     location / {
         proxy_pass http://plexservers;
@@ -17,8 +17,8 @@ server {
 
 
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/nginx/certs/live/plex.justintrahan.com/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/nginx/certs/live/plex.justintrahan.com/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/nginx/certs/live/trahan.dev/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/nginx/certs/live/trahan.dev/privkey.pem; # managed by Certbot
     include /etc/nginx/certs/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/nginx/certs/ssl-dhparams.pem; # managed by Certbot
 
@@ -26,17 +26,17 @@ server {
 }
 
 server {
-    if ($host = www.plex.justintrahan.com) {
+    if ($host = www.plex.trahan.dev) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
 
-    if ($host = plex.justintrahan.com) {
+    if ($host = plex.trahan.dev) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
 
-    server_name plex.justintrahan.com www.plex.justintrahan.com;
+    server_name plex.trahan.dev www.plex.trahan.dev;
     listen 80;
     return 404; # managed by Certbot
 
