--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '333'
+version: '3'
 services:
   bind9:
     container_name: bind-dns
@@ -7,60 +7,17 @@ services:
       - BIND9_USER=root
       - TZ=America/Chicago
     networks:
-      physical:
-        ipv4_address: 10.0.0.11
+      - bridgehomelab
     ports:
       - "53:53/tcp"
       - "53:53/udp"
     volumes:
-      - /dockconf/bind9/config/:/etc/bind
-      - /dockconf/bind9/cache:/var/cache/bind
-      - /dockconf/bind9/records:/var/lib/bind
+      - ./config/:/etc/bind
+      - ./cache:/var/cache/bind
+      - ./records:/var/lib/bind
     restart: unless-stopped
-  plex:
-    container_name: plex
-    image: plexinc/pms-docker
-    restart: unless-stopped
-    environment:
-      - TZ=CDT
-      - PLEX_CLAIM=[replace]
-    networks:
-      physical:
-        ipv4_address: 10.0.1.99
-    hostname: plexdocker
-    volumes:
-      - /plex/config/:/config
-      - /plex/transcode:/transcode
-      - /plex/media/:/data
-  reverse:
-    container_name: homelab-nginx
-    image: nginx
-    hostname: homelab-nginx
-    restart: unless-stopped
-    volumes:
-      - /plex/plex.conf:/etc/nginx/conf.d/default.conf
-      - /etc/letsencrypt:/etc/nginx/certs:ro
-    networks:
-      physical:
-        ipv4_address: 10.0.1.98
-  portainer:
-    container_name: portainer
-    hostname: portainer
-    image: portainer/portainer-ce:latest
-    restart: always
-    ports:
-      - "8000:8000"
-      - "9443:9443"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - portainer_data:/data
-    networks:
-      - bridehomelab
 networks:
-  physical:
-    external: true
-  bridehomelab:
+ bridgehomelab:
     driver: bridge
 
-volumes:
-  portainer_data:
+
