--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,7 @@ events {
 http {
 
     upstream plexservers {
+        server 10.0.0.12:34000;
         server 10.0.0.98:34000;
         server 10.0.1.99:32400;
         server 10.0.0.99:32400 backup;
