--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,10 +7,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/plex.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/plextrahdev.conf:/etc/nginx/conf.d/plexdev.conf
-      - ./nginx/pgadmin.conf:/etc/nginx/conf.d/pgadmin.conf
-      - ./nginx/portainer.conf:/etc/nginx/conf.d/portainer.conf
+      - ./nginx/conf.d:/etc/nginx/conf.d
       - /etc/letsencrypt/:/etc/nginx/certs:ro
     networks:
       physical_net:
