got bind9 working

--- a/docker/bind-dns/config/named.conf
+++ b/docker/bind-dns/config/named.conf
@@ -10,6 +10,14 @@ acl lanclients {
     10.0.0.0/23;
     10.35.0.0/24;
     10.30.0.0/24;
+    127.0.0.0/8;
+};
+
+acl dnsservers {
+    10.0.0.15;
+    10.0.0.99;
+    10.0.0.11;
+    127.0.0.0/8;
 };
 
 options {
@@ -17,19 +25,26 @@ options {
     listen-on { any; };
     recursion yes;
     
-    allow-query { lanclients;  };
+    allow-query { any;  };
     forwarders {
             8.8.8.8;
             8.8.4.4;
     };
 };
 
-zone "trahan.dev" {
+zone "trahan.dev" in{
     type master;
     file "/etc/bind/trahan.dev.zone";
+    allow-query { any ;};
+    allow-transfer { dnsservers; };
+    allow-update { dnsservers; };
+
 };
 
-zone "justintrahan.com" {
+zone "justintrahan.com" in{
     type master;
     file "/etc/bind/justintrahan.com.zone";
+    allow-query {  lanclients ;};
+    allow-transfer { dnsservers; };
+    allow-update { dnsservers; };
 };
