--- a/docker/nginx/configs/nginx.conf
+++ b/docker/nginx/configs/nginx.conf
@@ -25,7 +25,7 @@ http {
     }
 
     upstream pgadmin {
-        server 10.0.0.32:8888;
+        server pgadmin:8888;
     }
 
     include       /etc/nginx/mime.types;
