--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,4 @@
 version: "3.6"
-
 services:
   bind9:
     container_name: bind-dns
@@ -8,61 +7,62 @@ services:
       - BIND9_USER=root
       - TZ=America/Chicago
     networks:
-      physical:
-        ipv4_address: 10.0.0.11
+      - ovnet1
     ports:
       - "53:53/tcp"
       - "53:53/udp"
     volumes:
-      - ./bind-dns/config:/etc/bind
-      - ./bind-dns/cache:/var/cache/bind
-      - ./bind-dns/records:/var/lib/bind
+      - ./docker/bind-dns/config/:/etc/bind
+      - ./docker/bind-dns/cache:/var/cache/bind
+      - ./docker/bind-dns/records:/var/lib/bind
     restart: unless-stopped
-  plex:
-    container_name: plex
-    image: plexinc/pms-docker
-    restart: unless-stopped
-    environment:
-      - TZ=CDT
-      - PLEX_CLAIM=[replace]
-    networks:
-      physical:
-        ipv4_address: 10.0.1.99
-    hostname: plexdocker
-    volumes:
-      - /plex/config/:/config
-      - /plex/transcode:/transcode
-      - /plex/media/:/data
-  reverse:
-    container_name: homelab-nginx
-    image: nginx
-    hostname: homelab-nginx
-    restart: unless-stopped
-    volumes:
-      - /plex/plex.conf:/etc/nginx/conf.d/default.conf
-      - /etc/letsencrypt:/etc/nginx/certs:ro
-    networks:
-      physical:
-        ipv4_address: 10.0.1.98
   portainer:
-    container_name: portainer
-    hostname: portainer
     image: portainer/portainer-ce:latest
     restart: always
     ports:
       - "8000:8000"
+      - "9000:9000"
       - "9443:9443"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - portainer_data:/data
+      - /mnt/trahan-nas/portainer_data/:/data
+      - /mnt/trahan-nas/letsencrypt/:/ssl
     networks:
-      - bridehomelab
+      - ovnet1
+  nginx:
+    container_name: nginx
+    image: nginx
+    hostname: nginx-cluster
+    restart: unless-stopped
+    volumes:
+      - ./docker/nginx/configs/nginx.conf:/etc/nginx/nginx.conf
+      - ./docker/nginx/configs/conf.d:/etc/nginx/conf.d
+      - /etc/letsencrypt/:/etc/nginx/certs:ro
+    networks:
+      - ovnet1
+    ports:
+      - "80:80"
+      - "443:443"
+  pg-dbadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: humidnerd@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: LetsmakeaData1
+    ports:
+      - "8888:80"
+    volumes:
+      - /mnt/trahan-nas/pgadmin:/var/lib/pgadmin
+    networks:
+      - ovnet1
+  tcpdump:
+    image: nicolaka/netshoot
+    depends_on:
+      - nginx
+    command: tcpdump -i eth0 -w /data/nginx.pcap
+    network_mode: service:nginx
+    volumes:
+      - $PWD/data:/data
 networks:
-  physical:
+  ovnet1:
     external: true
-  bridehomelab:
-    driver: bridge
-    name: lab-bridge
-
-volumes:
-  portainer_data:
+    name: ovnet1
