--- a/docker/nginx/configs/conf.d/git.conf
+++ b/docker/nginx/configs/conf.d/git.conf
@@ -2,12 +2,13 @@ server {
     server_name git.trahan.dev www.git.trahan.dev;
 
     location / {
-        proxy_pass http://10.0.0.64:3000;
+        proxy_pass http://git-stack_git-repo:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        client_max_body_size 0;
     }
 
     # Additional Nginx settings (e.g., SSL) can be added here.
