--- a/docker/nginx/configs/conf.d/pgadmin.conf
+++ b/docker/nginx/configs/conf.d/pgadmin.conf
@@ -2,7 +2,7 @@ server {
     server_name pgadmin.trahan.dev www.pgadmin.trahan.dev;
 
     location / {
-        proxy_pass http://pgadmin;
+        proxy_pass http://pg-dbadmin;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection keep-alive;
