--- a/docker/nginx/configs/conf.d/git.conf
+++ b/docker/nginx/configs/conf.d/git.conf
@@ -2,7 +2,7 @@ server {
     server_name git.trahan.dev www.git.trahan.dev;
 
     location / {
-        proxy_pass http://git-stack_git-repo:3000;
+        proxy_pass http://git-repo:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
