adding haproxy swarm

--- a/docker/bind-dns/config/named.conf
+++ b/docker/bind-dns/config/named.conf
@@ -48,3 +48,9 @@ zone "justintrahan.com" in{
     allow-transfer { dnsservers; };
     allow-update { dnsservers; };
 };
+
+zone "0.0.10.in-addr.arpa" IN {
+    type slave;
+    file "0.0.10.in-addr.arpa";
+    masters { 10.0.0.15; };
+};
