--- a/docker/nginx/configs/conf.d/portainer.conf
+++ b/docker/nginx/configs/conf.d/portainer.conf
@@ -2,7 +2,7 @@ server {
     server_name portainer.trahan.dev www.portainer.trahan.dev;
 
     location / {
-        proxy_pass http://portainer:9000;
+        proxy_pass http://portainersvc:9000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
