--- a/docker/haproxy/haproxy.cfg
+++ b/docker/haproxy/haproxy.cfg
@@ -14,7 +14,7 @@ frontend http
     mode http
     option httplog
     bind *:80
-    bind *:443 ssl cert /etc/ssl/cert.pem
+    bind *:443 ssl crt /etc/ssl/cert.pem
     http-request redirect scheme https unless { ssl_fc }
 
     option forwardfor
