--- a/docker/haproxy/haproxy.cfg
+++ b/docker/haproxy/haproxy.cfg
@@ -7,6 +7,11 @@ global
   # For more information, see ciphers(1SSL).
   ssl-default-bind-ciphers kEECDH+aRSA+AES:kRSA+AES:+AES256:RC4-SHA:!kEDH:!LOW:!EXP:!MD5:!aNULL:!eNULL
 
+defaults 
+    timeout connect 5s
+    timeout client 1m
+    timeout server 1m 
+
 resolvers docker_resolver
     nameserver dns 127.0.0.11:53
 
@@ -14,17 +19,23 @@ frontend http
     mode http
     option httplog
     bind *:80
-    bind *:443 ssl crt /etc/ssl/cert.pem
+    bind *:443 ssl crt /etc/ssl/haproxy_cert.pem
     http-request redirect scheme https unless { ssl_fc }
 
+
     option forwardfor
+    http-request add-header X-Forwarded-Proto https
+    http-request add-header X-Forwarded-Port 443
+    http-response add-header Strict-Transport-Security max-age=15768000
+
+
     acl react_front hdr(host) -i calctest.trahan.dev
     acl go_api hdr(host) -i calcapi.trahan.dev
     acl git_tea hdr(host) -i git.trahan.dev
     acl plex_back hdr(host) -i plex.trahan.dev
     acl portainer_back hdr(host) -i portainer.trahan.dev
     acl pgadm_back hdr(host) -i pgadmin.trahan.dev
-    acl trahnas_back hdr(host) -i trahan-nas.trahan.dev
+    acl trahnas_back hdr(host) -i nas.trahan.dev
     acl prox1_back hdr(host) -i vm1.trahan.dev
     acl prox2_back hdr(host) -i vm2.trahan.dev
     acl trueold_back hdr(host) -i truenas.trahan.dev
@@ -52,62 +63,52 @@ frontend stats
 backend react
     mode http
 
-    server f1 frontend:3001
-    resolvers docker_resolver
-    init-addr none
+    server f1 frontend:3001 resolvers docker_resolver init-addr none
 backend goapi
     mode http
 
-    server b1 go-backend:8080
-    resolvers docker_resolver
-    init-addr none
+    server b1 go-backend:8080 resolvers docker_resolver init-addr none
 backend plexsrvs
     mode http
+    option httpchk
+    http-check send meth GET  uri /web/index.html
 
-    server p1 10.0.0.98:34000
-    server p2 10.0.1.99:32400
-    server p3 10.0.0.99:32400
-    server p4 10.0.0.12:34000
+    server p1 10.0.0.98:32400 check
+    server p2 10.0.1.99:32400 check
+    server p3 10.0.0.99:32400 check
+    server p4 10.0.0.12:34000 check
 backend giteasrv
     mode http
 
-    server git1 git-repo:3000
-    resolvers docker_resolver
-    init-addr none
+    server git1 git-repo:3000 resolvers docker_resolver init-addr none
 backend portain
     mode http
 
-    server port1 portainersvc:9000
-    resolvers docker_resolver
-    init-addr none
+    server port1 portainersvc:9000 resolvers docker_resolver init-addr none
 backend pgadm
     mode http
 
-    server pg1 pg-dbadmin
-    resolvers docker_resolver
-    init-addr none
+    server pg1 pg-dbadmin resolvers docker_resolver init-addr none
 backend truenew
     mode http
 
-    server tr1 10.0.0.8:80
+    server tr1 10.0.0.8:80 ssl verify none
 backend prox1
     mode http
 
-    server prx_one 10.0.0.50:8006
+    server prx_one 10.0.0.50:8006 ssl verify none
 backend prox2
     mode http
 
-    server prx_two 10.0.0.9:8006
+    server prx_two 10.0.0.9:8006 ssl verify none
 backend truenasold
     mode http
 
-    server tr2 10.0.0.12:80
+    server tr2 10.0.0.12:80 ssl verify none
 backend jell
     mode http
 
-    server jsrv1 jellyfin:8096
-    resolvers docker_resolver
-    init-addr none
+    server jsrv1 jellyfin:8096 resolvers docker_resolver init-addr none
 
 
 
