--- a/docker/haproxy/haproxy.cfg
+++ b/docker/haproxy/haproxy.cfg
@@ -3,11 +3,9 @@ global
   log stdout format raw local0
   daemon
 
-  # Default ciphers to use on SSL-enabled listening sockets.
-  # For more information, see ciphers(1SSL).
-  ssl-default-bind-ciphers kEECDH+aRSA+AES:kRSA+AES:+AES256:RC4-SHA:!kEDH:!LOW:!EXP:!MD5:!aNULL:!eNULL
-
 defaults 
+    option forwardfor
+    option http-server-close
     timeout connect 5s
     timeout client 1m
     timeout server 1m 
@@ -19,7 +17,8 @@ frontend http
     mode http
     option httplog
     bind *:80
-    bind *:443 ssl crt /etc/ssl/haproxy_cert.pem
+    bind *:443 ssl crt /etc/ssl/haproxy_full.pem
+    
     http-request redirect scheme https unless { ssl_fc }
 
 
@@ -27,12 +26,13 @@ frontend http
     http-request add-header X-Forwarded-Proto https
     http-request add-header X-Forwarded-Port 443
     http-response add-header Strict-Transport-Security max-age=15768000
+    http-request set-header X-Client-Certificate %[ssl_c_der,base64]
+
 
 
     acl react_front hdr(host) -i calctest.trahan.dev
     acl go_api hdr(host) -i calcapi.trahan.dev
     acl git_tea hdr(host) -i git.trahan.dev
-    acl plex_back hdr(host) -i plex.trahan.dev
     acl portainer_back hdr(host) -i portainer.trahan.dev
     acl pgadm_back hdr(host) -i pgadmin.trahan.dev
     acl trahnas_back hdr(host) -i nas.trahan.dev
@@ -40,6 +40,11 @@ frontend http
     acl prox2_back hdr(host) -i vm2.trahan.dev
     acl trueold_back hdr(host) -i truenas.trahan.dev
     acl jelly_back hdr(host) -i jelly.trahan.dev
+
+    acl plex_back hdr(host) -i plex.trahan.dev
+    #acl root_dir path_reg ^$|^/$
+    #acl no_plex_header req.hdr_cnt(X-Plex-Device-Name) -i 0
+    #http-request redirect code 301 location https://plex.trahan.dev/web/index.html if no_plex_header root_dir plex_back
 
     use_backend react if react_front
     use_backend goapi if go_api
@@ -63,20 +68,17 @@ frontend stats
 backend react
     mode http
 
-    server f1 frontend:3001 resolvers docker_resolver init-addr none
+    server f1 frontend:3001 resolvers docker_resolver init-addr none check
 backend goapi
     mode http
 
     server b1 go-backend:8080 resolvers docker_resolver init-addr none
 backend plexsrvs
     mode http
-    option httpchk
-    http-check send meth GET  uri /web/index.html
 
-    server p1 10.0.0.98:32400 check
-    server p2 10.0.1.99:32400 check
-    server p3 10.0.0.99:32400 check
-    server p4 10.0.0.12:34000 check
+    server np1 nginxplex:443 weight 1 maxconn 8192 check ssl verify none resolvers docker_resolver init-addr none
+    #server p2 10.0.1.99:32400
+    #server p3 10.0.0.99:32400
 backend giteasrv
     mode http
 
