--- a/docker/nginx/configs/conf.d/plextrahdev.conf
+++ b/docker/nginx/configs/conf.d/plextrahdev.conf
@@ -1,5 +1,5 @@
 server {
-    server_name plex.trahan.dev www.plex.trahan.dev;
+    server_name plex.trahan.dev www.plex.trahan.dev nginxplex;
 
     location / {
         proxy_pass http://plexservers;
