--- a/docker/haproxy/haproxy.cfg
+++ b/docker/haproxy/haproxy.cfg
@@ -17,7 +17,7 @@ frontend http
     mode http
     option httplog
     bind *:80
-    bind *:443 ssl crt /etc/ssl/haproxy_full.pem
+    bind *:443 ssl crt /etc/ssl/trahan.dev/haproxy_full.pem crt /etc/ssl/test.trahan.dev/ha_full.pem crt /etc/ssl/api.trahan.dev/ha_full.pem
     
     http-request redirect scheme https unless { ssl_fc }
 
@@ -30,8 +30,8 @@ frontend http
 
 
 
-    acl react_front hdr(host) -i calctest.trahan.dev
-    acl go_api hdr(host) -i calcapi.trahan.dev
+    acl react_front hdr(host) -i calc.test.trahan.dev
+    acl go_api hdr(host) -i calc.api.trahan.dev
     acl git_tea hdr(host) -i git.trahan.dev
     acl portainer_back hdr(host) -i portainer.trahan.dev
     acl pgadm_back hdr(host) -i pgadmin.trahan.dev
@@ -40,6 +40,7 @@ frontend http
     acl prox2_back hdr(host) -i vm2.trahan.dev
     acl trueold_back hdr(host) -i truenas.trahan.dev
     acl jelly_back hdr(host) -i jelly.trahan.dev
+    acl guac_back hdr(host) -i guac.trahan.dev
 
     acl plex_back hdr(host) -i plex.trahan.dev
     #acl root_dir path_reg ^$|^/$
@@ -57,6 +58,7 @@ frontend http
     use_backend prox2 if prox2_back
     use_backend truenasold if trueold_back
     use_backend jell if jelly_back
+    use_backend guaca if guac_back
 frontend stats
     mode http
     bind *:8404
@@ -68,15 +70,21 @@ frontend stats
 backend react
     mode http
 
-    server f1 frontend:3001 resolvers docker_resolver init-addr none check
+    server f1 frontend:80 resolvers docker_resolver init-addr none check
 backend goapi
     mode http
 
-    server b1 go-backend:8080 resolvers docker_resolver init-addr none
+    server b1 go-backend:8283 resolvers docker_resolver init-addr none
 backend plexsrvs
     mode http
 
     server np1 nginxplex:443 weight 1 maxconn 8192 check ssl verify none resolvers docker_resolver init-addr none
+    #server p2 10.0.1.99:32400
+    #server p3 10.0.0.99:32400
+backend guaca
+    mode http
+
+    server gu1 nginxplex:443 weight 1 maxconn 8192 check ssl verify none resolvers docker_resolver init-addr none
     #server p2 10.0.1.99:32400
     #server p3 10.0.0.99:32400
 backend giteasrv
@@ -90,7 +98,7 @@ backend portain
 backend pgadm
     mode http
 
-    server pg1 pg-dbadmin resolvers docker_resolver init-addr none
+    server pg1 pg-dbadmin:80 resolvers docker_resolver init-addr none check maxconn 8192
 backend truenew
     mode http
 
