--- a/docker/nginx/configs/conf.d/guacamole.conf
+++ b/docker/nginx/configs/conf.d/guacamole.conf
@@ -1,15 +1,19 @@
 server {
-    server_name git.trahan.dev www.git.trahan.dev;
+    server_name guac.trahan.dev www.guac.trahan.dev localhost;
 
     location / {
-        proxy_pass http://git-repo:3000;
+        proxy_pass http://guacamole:8080/guacamole/;
+        proxy_buffering off;
         proxy_http_version 1.1;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-        client_max_body_size 0;
-    }
+        proxy_set_header Connection $http_connection;
+        proxy_cookie_path /guacamole/ /;
+        access_log off;
+        # allow large uploads (default=1m)
+        # 4096m = 4GByte
+        client_max_body_size 4096m;
+}
 
     # Additional Nginx settings (e.g., SSL) can be added here.
 
