--- a/docker/prometheus-grafana/prometheus/prometheus.yml
+++ b/docker/prometheus-grafana/prometheus/prometheus.yml
@@ -28,10 +28,10 @@ alerting:
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
 
-  - job_name: app
+  - job_name: go-app
     scrape_interval: 5s
     static_configs:
-      - targets: ['host.docker.internal:8000']
+      - targets: ['go-backend:8283']
 
   - job_name: 'prometheus'
 
