--- a/docker/haproxy/haproxy-compose.yaml
+++ b/docker/haproxy/haproxy-compose.yaml
@@ -19,6 +19,15 @@ services:
       replicas: 5
       placement:
         max_replicas_per_node: 2
+    logging:
+      driver: "loki"
+      options:
+        loki-url: "http://${LOKI_URL}:3100/loki/api/v1/push"
+        loki-batch-size: "400"
+        no-file: "false"
+        keep-file: "true"
+        max-size: "5m"
+        max-file: "3"
   nginxplex:
     image: git.trahan.dev/jtrahan/nginx:dev
     restart: unless-stopped
@@ -36,6 +45,15 @@ services:
       replicas: 5
       placement:
         max_replicas_per_node: 2
+    logging:
+      driver: "loki"
+      options:
+        loki-url: "http://${LOKI_URL}:3100/loki/api/v1/push"
+        loki-batch-size: "400"
+        no-file: "false"
+        keep-file: "true"
+        max-size: "5m"
+        max-file: "3"
     depends_on:
       - haproxy
 networks:
