--- a/docker/haproxy/haproxy-compose.yaml
+++ b/docker/haproxy/haproxy-compose.yaml
@@ -8,11 +8,11 @@ services:
       - "8404:8404"
     volumes:
       - /mnt/share/gluster/haproxy:/usr/local/etc/haproxy
-      - /etc/letsencrypt/live/trahan.dev:/etc/ssl/trahan.dev
-      - /etc/letsencrypt/live/test.trahan.dev:/etc/ssl/test.trahan.dev
-      - /etc/letsencrypt/live/api.trahan.dev:/etc/ssl/api.trahan.dev
-      - /etc/letsencrypt/live/justintrahan.com:/etc/ssl/justintrahan.com
-      - /etc/letsencrypt/live/balloonstx.com:/etc/ssl/balloonstx.com
+      - /mnt/share/gluster/letsencrypt/live/trahan.dev:/etc/ssl/trahan.dev
+      - /mnt/share/gluster/letsencrypt/live/test.trahan.dev:/etc/ssl/test.trahan.dev
+      - /mnt/share/gluster/letsencrypt/live/api.trahan.dev:/etc/ssl/api.trahan.dev
+      - /mnt/share/gluster/letsencrypt/live/justintrahan.com:/etc/ssl/justintrahan.com
+      - /mnt/share/gluster/letsencrypt/live/balloonstx.com:/etc/ssl/balloonstx.com
     networks:
       - ovnet1
     deploy:
@@ -35,7 +35,7 @@ services:
       - /mnt/share/gluster/nginx-1/configs/nginx.conf:/etc/nginx/nginx.conf
       - /mnt/share/gluster/nginx-1/configs/conf.d/plextrahdev.conf:/etc/nginx/conf.d/plextrahdev.conf
       - /mnt/share/gluster/nginx-1/configs/conf.d/guacamole.conf:/etc/nginx/conf.d/guacamole.conf
-      - /etc/letsencrypt/:/etc/nginx/certs:ro
+      - /mnt/share/gluster/letsencrypt/:/etc/nginx/certs:ro
     networks:
       - ovnet1
     ports:
