--- a/docker/haproxy/haproxy.cfg
+++ b/docker/haproxy/haproxy.cfg
@@ -17,7 +17,7 @@ frontend http
     mode http
     option httplog
     bind *:80
-    bind *:443 ssl crt /etc/ssl/trahan.dev/haproxy_full.pem crt /etc/ssl/test.trahan.dev/ha_full.pem crt /etc/ssl/api.trahan.dev/ha_full.pem
+    bind *:443 ssl crt /etc/ssl/trahan.dev/trahan.dev.full.pem crt /etc/ssl/test.trahan.dev/test.trahan.dev.full.pem crt /etc/ssl/api.trahan.dev/api.trahan.dev.full.pem
     
     http-request redirect scheme https unless { ssl_fc }
 
