--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ docker/bind-dns/cache
 docker/bind-dns/records
 docker/config
 docker/jellyfin/config
+**devserver.yaml
+scripts/bash/cloudinit/devserver.yaml
