--- a/ansible/playbooks/postgres/vars.yml
+++ b/ansible/playbooks/postgres/vars.yml
@@ -28,6 +28,11 @@ postgresql_hba_entries:
 - {contype: host, databases: infradb-dev, users: jtrahan, address: samenet, method: scram-sha-256}
 - {contype: host, databases: all, users: replicator, address: samenet, method: scram-sha-256}
 
+postgres_hba_standy_entries:
+- {contype: host, databases: replication, users: replicator, address: samenet, method: trust}
+- {contype: host, databases: all, users: all, address: samenet, method: scram-sha-256}
+
+
 postgresql_extensions:
 - {db: infradb-dev, name: hstore,}
 
