--- a/ansible/playbooks/postgres/playbook.yml
+++ b/ansible/playbooks/postgres/playbook.yml
@@ -176,13 +176,13 @@
       ansible.builtin.command: /usr/local/bin/b2 account authorize "{{ item.key }}" "{{ item.secret }}"
       with_items: "{{ b2_app_key_and_secret }}"
 
-    - name: Download backup from b2 for go-infra
-      ansible.builtin.command: /pgdumps/venv/bin/b2 account authorize "{{ item.key }}" "{{ item.secret }}"
-      with_items: "{{ b2_app_key_and_secret }}"
+#    - name: Download backup from b2 for go-infra
+#      ansible.builtin.command: /pgdumps/venv/bin/b2 account authorize "{{ item.key }}" "{{ item.secret }}"
+#      with_items: "{{ b2_app_key_and_secret }}"
 
     - name: Download backup from b2 for go-infra
       ansible.builtin.command: 
-        cmd: /pgdumps/venv/bin/b2 file download "{{ item.remotefile }}" "{{ item.localfile }}"
+        cmd: /usr/local/bin/b2 file download "{{ item.remotefile }}" "{{ item.localfile }}"
         creates:
       with_items: "{{ b2_app_key_and_secret }}"
 
