added ts router

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,18 @@ terraform/id_rsa.pub*
 **.tfvars
 **credentials.tfvars
 **.backup
+**vault.yml
 terraform/proxmox/**.terraform
 terraform/proxmox1/.terraform.lock.hcl
 terraform/proxmox1/.terraform/
 scripts/bash/cloudinit/devserver.yaml
 scripts/bash/debian.sh
+terraform/k3s/id_rsa.pub
+**id_rsa
+**.backup
+**.tfstate
+**.terraform/**
+terraform/postgres/.terraform/**
+**.terraform.lock.hcl
+**99-mydata.cfg
+terraform/tailscale_router/.terraform/**
