--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ terraform/tailscale_router/.terraform/**
 terraform/postgres/postgres.conf copy.tpl
 terraform/postgres/postgres.conf.tpl
 terraform/tailscale_router/cloud-init-lxc.tpl
+terraform/postgres/.terraform.lock.hcl
