--- a/ansible/playbooks/postgres/vars.yml
+++ b/ansible/playbooks/postgres/vars.yml
@@ -5,7 +5,7 @@ postgresql_options:
 - {name: archive_mode, value: on}
 - {name: archive_command, value: 'test ! -f /mnt/backups/pg_archive/%f && cp %p /mnt/backups/pg_archive/%f'}
 
-postgresql_databases: [infradb-dev, automation-db]
+postgresql_databases: [infradb-dev, automation-db, go-infra]
 
 postgresql_users:
 - {db: infradb-dev, name: jtrahan, password: "{{ vault_postgresql_jtrahan_password }}"}
@@ -36,5 +36,7 @@ postgresql_extensions:
 - {db: infradb-dev, name: hstore}
 
 b2_app_key_and_secret:
-- {key: "{{ vault_b2_app_key }}", secret: "{{ vault_b2_app_secret }}", localfile: /pgdumps/goinfra.7z, remotefile: 'b2://trahan-postgres-backups/goinfra.7z',}
+- {key: "{{ vault_b2_app_key }}", secret: "{{ vault_b2_app_secret }}", localfile: /pgdumps/goinfra.7z, remotefile: 'b2://trahan-postgres-backups/goinfra.7z'}
 
+seven_z_pw:
+- {pw: "{{ vault_archive_pw }}", localfile: goinfra.7z, path: /pgdumps, db_name: go-infra}
